# catp2p

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  FILE_STRUCTURE.md  LICENSE  README.md  add.py  blog.html  index.html  markdown-page.html  sitemap.xml
.github/workflows/: documentation.yml
assets/css/: styles.35324f49.css  styles.5786a85e.css
assets/js/: 064d7151.0b45537e.js  06c5a0f7.51222395.js  070003cb.7c94cdf9.js  070003cb.987384f1.js  070003cb.a5293b84.js  070003cb.ec00276f.js  0d1631f5.907e8ff6.js  0e384e19.351caf87.js  0e384e19.965f130a.js  0e384e19.cbf8700f.js  10f98305.adc00a8a.js  13d981a9.cde87f7c.js  14eb3368.b3e373ba.js  17896441.da0b1607.js  18c41134.167fb6c0.js  18c41134.839dc45e.js  1d9e2fe5.0141aa31.js  1d9e2fe5.a8b81fa0.js  1d9e2fe5.e6724f3f.js  1df93b7f.3e7e0390.js  1df93b7f.d67d0de5.js  1e4232ab.9e47148b.js  1f391b9e.e09db14e.js  1f42a356.63ba7c80.js  1f4c9cae.f62f8e6c.js  223.fdf874a6.js  2dcd66fb.1b663611.js  2f40f8df.c42287be.js  315d5804.3d7afdf9.js  315d5804.62441d81.js  315d5804.6e4bb729.js  315d5804.eb6767af.js  341.0f88e7b9.js  393be207.7b05730a.js  393be207.cfbbfb07.js  48f80c95.433467db.js  48f80c95.8cc99971.js  48f80c95.8e41ade3.js  4a06412b.271ff949.js  4a06412b.4f437ec0.js  (+94 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/authors/: all-sebastien-lorber-articles.html  yangshun.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
docs/: Examples.html  intro.html
docs-site/: docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
docs-site/docs/: _category_.json  intro.md
docs-site/docs/Benchmarking/: _category_.json  cpu-benchmarking.md  gpu-benchmarking.md  memory-benchmarking.md
docs-site/docs/Examples/: cpu-benchmark-example.md  gpu-benchmark-example.md  index.md
docs-site/docs/api/: _category_.json
docs-site/docs/docs/: _category_.json
docs-site/docs/guides/: _category_.json  cpu-benchmarking.md
docs-site/src/pages/: index.module.css  index.tsx
docs/Benchmarking/: cpu-benchmarking.html  drive-benchmarking.html  gpu-benchmarking.html  memory-benchmarking.html
docs/Examples/: cpu-benchmark-example.html  gpu-benchmark-example.html
docs/Examples/benchmarks/: cpu-benchmark-example.html  gpu-benchmark-example.html
docs/Examples/system-info/: gpu-information.html
docs/api/benchmark/: cpu.html  drives.html  gpu.html  memory.html
docs/api/system-info/: gpu.html
docs/category/: api-reference.html  benchmarking-1.html  benchmarking.html  benchmarks.html  documentation.html  guides.html  system-information-1.html  system-information-2.html  system-information.html  tutorial---basics.html  tutorial---extras.html
docs/docs/Benchmarking/: cpu-benchmarking.html  drive-benchmarking.html  gpu-benchmarking.html  memory-benchmarking.html
docs/docs/system-info/: gpu_info.html
docs/guides/: cpu-benchmarking.html
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  create-a-page.html  deploy-your-site.html  markdown-features.html
docs/tutorial-extras/: manage-docs-versions.html  translate-your-site.html
examples/: benchmark_runner.rs  cpu_benchmark.rs  drive_benchmark.rs  gpu_benchmark.rs  memory_benchmark.rs  simple_node.rs  task_execution.rs
examples/hardware/gpu/: all_gpus.rs  basic_info.rs  (+4 more)
src/: config.rs  error.rs  lib.rs
src/benchmark/: cpu.rs  disk.rs  drives.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/examples/: benchmark_runner.rs  cpu_benchmark.rs  simple_node.rs  task_execution.rs
src/hardware/: mod.rs
src/network/: allocation.rs  discovery.rs  mod.rs  monitor.rs  protocol.rs  transport.rs
src/resources/: allocation.rs  mod.rs  monitor.rs
src/scoring/: mod.rs  points.rs
src/storage/: db.rs  mod.rs
src/tasks/: cpu.rs  gpu.rs  mod.rs  scheduler.rs
src/utils/: crypto.rs  logging.rs  mod.rs  serialization.rs  time.rs
(+31 files in other folders)
