[package]
name = "catp2p"
version = "0.1.0"
edition = "2021"
authors = ["Joao Guimaraes <johnnyvillasdev@gmail.com>"]
description = "A high-performance P2P library for distributed computing"
repository = "https://github.com/johnnyvillas/catp2p"
license = "Apache-2.0"
readme = "README.md"
keywords = ["p2p", "distributed", "networking", "computing"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Networking
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "identify", "ping", "mdns", "macros"] }
futures = "0.3"
lazy_static = "1.4.0"
dirs = "5.0.1"
chrono = "0.4.31"

# Task Management
rayon = "1.7"
wgpu = { version = "0.17", optional = false } # Changed from optional to required for GPU benchmarking
winit = "0.28" # Added for GPU window management
pollster = "0.3" # Added for async/sync bridging in GPU benchmarking
bytemuck = { version = "1.13", features = ["derive"] } # Added for GPU data conversion

# Resource Monitoring
sysinfo = "0.29"
tokio = { version = "1.28", features = ["full"] }

# Storage
sled = { version = "0.34", features = ["compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
async-trait = "0.1"
num_cpus = "1.16.0"
regex = "1.10.2"  # Added for GPU info parsing

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.8"
colored = "2.0"


[features]
default = ["cpu", "storage", "gpu"] # Added GPU to default features
cpu = []
gpu = []
storage = []
full = ["cpu", "gpu", "storage"]

# CPU benchmark examples
[[example]]
name = "cpu_benchmark"
path = "examples/cpu_benchmark.rs"

[[example]]
name = "memory_benchmark"
path = "examples/memory_benchmark.rs"

[[example]]
name = "drive_benchmark"
path = "examples/drive_benchmark.rs"

# GPU benchmark examples
[[example]]
name = "gpu_benchmark"
path = "examples/gpu_benchmark.rs"

# GPU information examples
[[example]]
name = "hardware_gpu_basic_info"
path = "examples/hardware/gpu/basic_info.rs"

[[example]]
name = "hardware_gpu_all_gpus"
path = "examples/hardware/gpu/all_gpus.rs"

[[example]]
name = "hardware_gpu_info"
path = "examples/hardware/gpu/gpu_info.rs"

[[example]]
name = "hardware_gpu_monitoring"
path = "examples/hardware/gpu/monitoring.rs"

[[example]]
name = "hardware_gpu_performance"
path = "examples/hardware/gpu/performance.rs"

[[example]]
name = "hardware_gpu_run_all"
path = "examples/hardware/gpu/run_all.rs"
